--- a/final_assignment/k8s/db-deployment.yaml
+++ b/final_assignment/k8s/db-deployment.yaml
@@ -36,3 +36,17 @@ spec:
       volumes:
         - name: db-data
           emptyDir: {}
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres-service
+  namespace: crud-app
+spec:
+  type: ClusterIP
+  selector:
+    app: curd-app-db
+  ports:
+    - port: 5432
+      targetPort: 5432
