Rohit, Raghunandhan, Sri Laxmi | | Add. Service for backend pod.

--- a/final_assignment/k8s/backend-deployment.yaml
+++ b/final_assignment/k8s/backend-deployment.yaml
@@ -31,3 +31,17 @@ spec:
                 secretKeyRef:
                   name: db-secret
                   key: db-password
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend-service
+  namespace: crud-app
+spec:
+  type: ClusterIP
+  selector:
+    app: backend-api
+  ports:
+    - port: 8000
+      targetPort: 8000
