--- a/final_assignment/k8s/backend-deployment.yaml
+++ b/final_assignment/k8s/backend-deployment.yaml
@@ -21,7 +21,7 @@ spec:
             - containerPort: 8000
           env:
             - name: db_address
-              value: postgres
+              value: postgres-service
             - name: db_username
               value: postgres
             - name: db_name
