--- a/final_assignment/k8s/db-deployment.yaml
+++ b/final_assignment/k8s/db-deployment.yaml
@@ -35,7 +35,8 @@ spec:
               mountPath: /var/lib/postgresql/data
       volumes:
         - name: db-data
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: postgres-persistent-volume-claim
 
 ---
 apiVersion: v1
@@ -50,3 +51,30 @@ spec:
   ports:
     - port: 5432
       targetPort: 5432
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: postgres-persistent-volume
+  namespace: crud-app
+spec:
+  accessModes:
+    - ReadWriteOnce
+  capacity: 
+    storage: 1Gi
+  hostPath:
+    path: /data/postgres
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-persistent-volume-claim
+  namespace: crud-app
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
